--- a/package.json
+++ b/package.json
@@ -71,9 +71,11 @@
     "exports-loader": "^0.6.3",
     "file-loader": "^0.10.0",
     "gh-pages": "^0.12.0",
+    "google-maps-react": "^1.1.2",
     "identity-obj-proxy": "^3.0.0",
     "imports-loader": "^0.7.0",
     "jest-cli": "^18.1.0",
+    "material-ui": "^0.19.4",
     "minify": "^2.0.12",
     "node-sass": "^4.5.0",
     "react-addons-test-utils": "^15.4.2",
