--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "lodash": "^4.17.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-masonry-infinite": "^1.2.1",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "react-router-dom": "^4.2.2",
@@ -70,6 +69,7 @@
     "css-loader": "^0.26.1",
     "exports-loader": "^0.6.3",
     "file-loader": "^0.10.0",
+    "firebase": "^4.6.1",
     "gh-pages": "^0.12.0",
     "google-maps-react": "^1.1.2",
     "identity-obj-proxy": "^3.0.0",
