--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "react-hot-loader": "^3.0.0-beta.6",
     "react-image-gallery": "^0.8.3",
     "react-responsive": "^1.3.4",
+    "react-swipeable-views": "^0.12.9",
     "rimraf": "^2.5.4",
     "sass-lint": "^1.9.1",
     "sass-loader": "^6.0.0",
