--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "node-sass": "^4.5.0",
     "react-addons-test-utils": "^15.4.2",
     "react-facebook-login": "^3.6.2",
+    "react-google-autocomplete": "^1.0.15",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-image-gallery": "^0.8.3",
     "react-responsive": "^1.3.4",
