check if user is admin, firebase data and rules json

--- a/firebase.json
+++ b/firebase.json
@@ -16,6 +16,10 @@
       "title": "Ostatni komentarz"
     }
   ],
+  "admins": {
+    "L25nfT76yFQWmW6dJ0e4M4tLoLa2": true,
+    "Wpsr4rgEKcMSa5xo0ZciiTcFjnt1": true
+  },
   "places": [
     {
       "description": "Nowoczesny drapacz chmur w Gdyni. Został wybudowany w 2009 roku i jest dwunastym najwyższym wierzowcem w Polsce. Widoki z samej góry zapierają dech w piersiach.",
