--- a/firebase.json
+++ b/firebase.json
@@ -18,7 +18,8 @@
   ],
   "admins": {
     "L25nfT76yFQWmW6dJ0e4M4tLoLa2": true,
-    "Wpsr4rgEKcMSa5xo0ZciiTcFjnt1": true
+    "Wpsr4rgEKcMSa5xo0ZciiTcFjnt1": true,
+    "NQJlAoMfRNfwMw5K8lF0ZXcDHBN2": true
   },
   "places": [
     {
