--- a/firebase.json
+++ b/firebase.json
@@ -120,5 +120,10 @@
       "lon": "18.5730664",
       "name": "Uniwersytet Gdański"
     }
+  },
+  "ratings": {
+    "-L2Q3h2ECXNDlNYuIuey": {
+      "Wpsr4rgEKcMSa5xo0ZciiTcFjnt1": 4
+    }
   }
 }
