--- a/firebase.json
+++ b/firebase.json
@@ -11,7 +11,7 @@
       "title": "Komentarz1"
     },
     {
-      "content": "Kolejny komenarz",
+      "content": "Kolejny komentarz",
       "place_id": 0,
       "title": "Komentarz2"
     },
