--- a/package.json
+++ b/package.json
@@ -1,34 +1,30 @@
 {
-  "name": "boilerplate",
+  "name": "TurystyczneTriCity",
   "version": "2.0.0-beta.3",
   "description": "TurystyczneTriCity",
-  "homepage": "https://TurystyczneTriCity.com/",
+  "homepage": "https://ttricity.me/",
   "author": {
     "name": "TurystyczneTriCity",
-    "email": "TurystyczneTriCity@gmail.com"
+    "email": "ttricity@gmail.com"
   },
   "keywords": [
     "react",
     "redux",
-    "jest",
     "scss",
     "sass",
-    "boilerplate",
     "webpack-dev-server",
-    "yarn",
-    "hmr"
+    "yarn"
   ],
   "scripts": {
     "start": "webpack-dev-server",
     "build": "cross-env NODE_ENV=production webpack --display-error-details --config webpack-production.config.js && uglifyjs ./assets/vendor.js > dist/vendor.js && rm ./dist/*.map",
     "buildvendor": "webpack --config webpack-vendor.config.js",
     "clean": "rimraf dist",
-    "lint": "tslint --force \"src/**/*.ts*\" && sass-lint -v -q src/**/*.scss",
     "ghpages": "minify assets/index.html > dist/index.html && gh-pages -d dist"
   },
   "engines": {
     "npm": ">=3.10.0",
-    "node": ">=6.9.0",
+    "node": ">=8.0.0",
     "yarn": ">=0.16.0"
   },
   "dependencies": {
@@ -39,13 +35,17 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
+    "firebase": "^4.8.0",
+    "google-maps-react": "^2.0.2",
     "lodash": "^4.17.4",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-redux": "^5.0.2",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-hot-loader": "^4.2.0",
+    "react-redux": "^5.0.7",
     "react-router": "^3.0.2",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.7",
+    "react-swipeable-views": "^0.12.13",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
     "redux-promise": "^0.5.3",
@@ -63,30 +63,20 @@
     "@types/react-router-redux": "^4.0.40",
     "@types/whatwg-fetch": "0.0.33",
     "babel-preset-stage-1": "^6.1.18",
-    "codecov": "^1.0.1",
     "copy-webpack-plugin": "^4.0.0",
     "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
     "exports-loader": "^0.6.3",
     "file-loader": "^0.10.0",
-    "firebase": "^4.6.1",
-    "gh-pages": "^0.12.0",
-    "google-maps-react": "^1.1.2",
     "identity-obj-proxy": "^3.0.0",
     "imports-loader": "^0.7.0",
-    "jest-cli": "^18.1.0",
     "material-ui": "^0.19.4",
     "minify": "^2.0.12",
     "node-sass": "^4.9.0",
-    "react-addons-test-utils": "^15.4.2",
-    "react-facebook-login": "^3.6.2",
     "react-google-autocomplete": "^1.0.15",
-    "react-hot-loader": "^3.0.0-beta.6",
     "react-responsive": "^1.3.4",
     "react-star-ratings": "^1.4.1",
-    "react-swipeable-views": "^0.12.9",
     "rimraf": "^2.5.4",
-    "sass-lint": "^1.9.1",
     "sass-loader": "^6.0.0",
     "source-map-loader": "^0.1.6",
     "style-loader": "^0.13.1",
