update dependencies, nice scrollbars

--- a/package.json
+++ b/package.json
@@ -49,13 +49,14 @@
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
     "redux-promise": "^0.5.3",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "react-star-ratings": "^1.4.1",
+    "react-google-autocomplete": "^1.0.15",
+    "material-ui": "^0.19.4"
   },
   "devDependencies": {
-    "@types/jest": "^18.1.1",
     "@types/node": "6.0.52",
     "@types/react": "^15.0.7",
-    "@types/react-addons-test-utils": "^0.14.17",
     "@types/react-dom": "^0.14.23",
     "@types/react-hot-loader": "^3.0.1",
     "@types/react-redux": "^4.4.36",
@@ -70,12 +71,9 @@
     "file-loader": "^0.10.0",
     "identity-obj-proxy": "^3.0.0",
     "imports-loader": "^0.7.0",
-    "material-ui": "^0.19.4",
     "minify": "^2.0.12",
     "node-sass": "^4.9.0",
-    "react-google-autocomplete": "^1.0.15",
     "react-responsive": "^1.3.4",
-    "react-star-ratings": "^1.4.1",
     "rimraf": "^2.5.4",
     "sass-loader": "^6.0.0",
     "source-map-loader": "^0.1.6",
